# fairy-ring

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: config.rs  lib.rs  main.rs  matrix.rs  qq.rs
src/qq/: login.rs
