[package]
name = "fairy-ring"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
proc_qq = { git = "https://github.com/niuhuan/rust_proc_qq.git", rev = "7625f95d" }
bytes = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"

[dependencies.matrix-sdk-appservice]
# version = "0.6"
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "9148eaae"
features = ["eyre"]

[profile.dev]
strip = true

[profile.release]
strip = true
